--- a/paginainicial.css
+++ b/paginainicial.css
@@ -68,3 +68,14 @@ ul {
         text-align: center;
         background-color: black;
     }  
+    nav a {
+        color: #fbb829;
+        font-size: 20px;
+        text-decoration: none;
+    }
+    
+    nav li {
+        display: inline;
+        margin-top: 10px;
+        padding: 100px;
+    }
