--- a/style.css
+++ b/style.css
@@ -86,11 +86,22 @@ nav li {
 }
 
 a:link {
-    color: #00F;
-    background-color: yellow;
+    background: #B1B1B1;
+    color: #FFF;
+    text-decoration: none;
+    font-weight: bold;
+    border-width: 4px;
+    border-style: solid;
+    border-top-color: #DFDFDF;
+    border-right-color: #666;
+    border-bottom-color: #333;
+    border-left-color: #858585;
+   
    }
    
    a:hover {
-    color: #F00;
-    background-color: black;
+    background: #B1B1B1;
+    color: #FFF;
+    font-weight: bold;
+    border-color: #B1B1B1;
    }
