--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
 
 }
 
+
 p3 {
     color: #FF0000;
     font-size: 30px;
@@ -85,6 +86,13 @@ nav li {
     margin-top: 10px;
     padding: 100px;
     
+}
+
+.menu{
+position: relative;
+top: 50px;
+left: 50px;
+
 }
 
 a:link {
